--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "vuepress build ."
   },
   "dependencies": {
+    "@vuepress/plugin-register-components": "^1.9.7",
     "vuepress": "2.0.0-beta.48",
     "vuepress-theme-reco": "2.0.0-beta.33"
   }
